correction gap dans la gallerie

--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -4,7 +4,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
   gap: 3rem;
-  padding: 2rem; 
+  row-gap: 1.5rem;
+  padding: 3rem; 
   margin: 4rem 4rem; 
   background-color: $background-light;
   border-radius: 25px;
